--- a/slides/index.html
+++ b/slides/index.html
@@ -2121,7 +2121,10 @@ TypeError: 'tuple' object does not support item assignment
           { src: 'plugin/markdown/marked.js' },
           { src: 'plugin/markdown/markdown.js' },
           { src: 'plugin/notes/notes.js', async: true },
-          { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+          { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+          { src: 'plugin/title-footer/title-footer.js', async: true, callback: function() {
+            title_footer.initialize("trey.io/nbpy2025", "rgba(0,255,0,0.0)");
+          } }
         ]
       });
       if (window.self !== window.top) {
