Add references and various updates

--- a/index.html
+++ b/index.html
@@ -102,9 +102,39 @@
     TODO
     </p>
 
-    <h5><a href="https://github.com/treyhunner/python-oddities">&ldquo;Python Oddities repository&rdquo; by Trey Hunner</a></h5>
+    <h5><a href="https://www.pythonmorsels.com/pointers/">&ldquo;Variables and objects in Python&rdquo; by Trey Hunner</a></h5>
     <p>
-    I'm slowly noting explanations for various Python oddities here.
+    An article explaining this concept.
+    </p>
+
+    <h5><a href="https://www.youtube.com/watch?v=g-iNz91YyGw&list=PL2iGGYc-iqtxqYqlwAcLeB5aqR-I-R_qQ&index=4">&ldquo;Variable Assignments in Python&rdquo; by Trey Hunner</a></h5>
+    <p>
+    A playlist of a few short Python screencasts explaining this topic.
+    </p>
+
+    <h5><a href="https://nedbatchelder.com/text/names1.html">&ldquo;Facts and Myths about Names and Values&rdquo; by Ned Batchelder</a></h5>
+    <p>
+    A talk that uses an extended visual metaphor to explain memory management, which <em>also</em> explains how objects work in Python.
+    </p>
+
+    <h5><a href="https://pyvideo.org/pyohio-2011/pyohio-2011-names-objects-and-plummeting-from.html">&ldquo;Names, Objects, and Plummeting From The Cliff&rdquo; by Brandon Rhodes</a></h5>
+    <p>
+    A talk that uses an extended visual metaphor to explain memory management, which <em>also</em> explains how objects work in Python.
+    </p>
+
+    <h5><a href="https://nedbatchelder.com/blog/202301/same_words_different_meanings.html">&ldquo;Same words, different meanings&rdquo; by Ned Batchelder</a></h5>
+    <p>
+    An article related to the fuzzy nature of words, especially technical terms. This applies to my use of the word "pointer" to describe Python's variables.
+    </p>
+
+    <h5><a href="https://youtu.be/3JaOVs9amMk?feature=shared">&ldquo;Different Names for the Same Thing&rdquo; by Death Cab For Cutie</a></h5>
+    <p>
+    A song to help you remember that two variables can point to the same object in Python.
+    </p>
+
+    <h5><a href="https://trey.io/oddities">&ldquo;Python Oddities talk&rdquo; by Trey Hunner</a></h5>
+    <p>
+    I gave a talk on some of my favorite Python oddities at PyCon. The last one is related to both <code>+=</code> and tuples.
     </p>
 
     <footer class="pt-3 my-4 border-top">
