Remove TODO from resources page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <input type="email" name="fields[email]" id="drip-email" placeholder="email@domain.com" required="" class="form-control form-control-lg">
         </div>
         <div class="col-auto">
-          <input type="hidden" name="fields[source]" value="newsletter_page">
+          <input type="hidden" name="fields[source]" value="nbpy2025">
           <div style="display: none;" aria-hidden="true">
             <label for="website">Website</label><br>
             <input type="text" id="website" name="website" tabindex="-1" autocomplete="false" value="">
@@ -97,10 +97,6 @@
     <hr>
 
     <h3>Resources</h3>
-
-    <p>
-    TODO
-    </p>
 
     <h5><a href="https://www.pythonmorsels.com/pointers/">&ldquo;Variables and objects in Python&rdquo; by Trey Hunner</a></h5>
     <p>
