Add intro slide and link to recording

--- a/index.html
+++ b/index.html
@@ -41,15 +41,13 @@
 
     <hr>
 
-    <!--
     <h3>Recording of this talk</h3>
     <p>
-    You can watch the recording of this talk below.
+    You can watch <a href="https://youtu.be/5XO7yPel9Lg">the recording</a> of this talk below.
     </p>
-    <iframe width="100%" height="340" src="https://www.youtube.com/embed/APuLJ4pfM4c?si=-AkAFMZJCGDZqiHg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="100%" height="340" src="https://www.youtube.com/embed/5XO7yPel9Lg?si=eFD2K2XBiWOZB61s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <hr>
-    -->
 
     <h3>The slides</h3>
     <p>
