--- a/slides/index.html
+++ b/slides/index.html
@@ -34,7 +34,26 @@
           <small><a href="https://treyhunner.com/" rel="author">Trey Hunner</a></small>
           </h3>
           <aside class="notes" data-markdown>
-            - TODO
+            - ...
+            - A *very* brief introduction before I get started
+            - My name is Trey
+          </aside>
+        </section>
+
+        <section>
+          <div class="aboutme-card">
+            <a href="http://pythonmorsels.com"><img src="morsels-logo.svg" class="no-style aboutme-logos" alt="Python Morsels"></a>
+          </div>
+          <div class="aboutme-card">
+            <a href="http://truthful.technology"><img src="truthful-technology-logo.svg" class="no-style aboutme-logos" alt="Truthful Technology"></a>
+          </div>
+          <p>trey @ Python Morsels .com</p>
+          <aside class="notes" data-markdown>
+            - And I help folks **level-up** their Python skills
+            - I do that through Python Morsels, which involves deepening your skills by solving interesting practical Python exercises
+            - and I also hold team trainings on both introductory and advanced Python topics, as well as related technologies like Pytest and Django
+            - If you would like my help leveling up your or your team's Python skills, contact me
+            - ...
           </aside>
         </section>
 
